--- a/my-first-project/package.json
+++ b/my-first-project/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "my-first-vue-project",
+  "name": "my-first-project",
   "version": "1.0.0",
-  "description": "this is my very first vue project",
-  "author": "t-weihong.li <t-weihong.li@pcitc.com>",
+  "description": "vue 学习",
+  "author": "李潍宏",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
